--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
     "rewrites": [
       {
-        "source": "/(.*)", 
-        "destination": "/"
+        "source": "/:match*",
+        "destination": "/index.html"
       }
     ]
   }
+  
