--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
     "rewrites": [
-      {
-        "source": "/:match*",
-        "destination": "/index.html"
-      }
+      { "source": "/(.*)", "destination": "/index.html" }
     ]
   }
+  
   
